<resources>
    <string name="app_name">Редактор</string>
    <string name="head_first_page">Photo Picker</string>
    <string name="rotate_name">Повернуть</string>
    <string name="navigation_bw">Черно-белый</string>
    <string name="navigation_sepia">Сепия</string>
    <string name="navigation_negative">Негатив</string>
    <string name="resize_name">Масштабирование</string>
    <string name="unsharp_mask">Маскирование</string>
    <string name="show_photoeditor">Обработка</string>
    <string name="image_not_added">Изображение не добавлено или добавлено некорректно.</string>
    <string name="save_in_process">Сохранение изображения, подождите...</string>
    <string name="saving_success">Изображение сохранено успешно: </string>
    <string name="save_to_storage">Сохранить</string>
    <string name="navigation_detect_faces">Распознавание лиц</string>
    <string name="image_view_content_description">Изображение</string>
    <string name="add_photo_button_description">Добавить изображение</string>
    <string name="apply_changes_content_description">Применить изменения</string>
</resources>