<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/bw_menu_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/navigation_bw" />

    <TextView
        android:id="@+id/sepia_menu_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/navigation_sepia" />

    <TextView
        android:id="@+id/rotate_menu_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/rotate_name" />

    <TextView
        android:id="@+id/resize_menu_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/resize_name" />

    <TextView
        android:id="@+id/unsharp_mask_menu_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/unsharp_mask" />

    <TextView
        android:id="@+id/negative_filter_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/navigation_negative" />


</LinearLayout>