<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_rotate"
        android:icon="@drawable/ic_rotate"
        android:title="@string/rotate_name" />
    <item
        android:id="@+id/navigation_resize"
        android:icon="@drawable/ic_rotate"
        android:title="@string/resize_name" />
    <item
        android:id="@+id/bw"
        android:icon="@drawable/ic_bw"
        android:title="@string/navigation_hdr" />

    <item
        android:id="@+id/sepia"
        android:icon="@drawable/ic_bw"
        android:title="@string/navigation_sepia" />

    <item
        android:id="@+id/negative"
        android:icon="@drawable/ic_bw"
        android:title="@string/navigation_negative"/>
</menu>